2003-11-16  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-directory-view.c:
	(activate_activation_uri_ready_callback),
	(fm_directory_view_activate_file): Reread the activation URI of
	symlinks in case the link target is stale.  Patch from
	Maneesh Pusalkar <mpusalkar@novell.com>.

2003-11-13  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-directory-view.c (open_location):
	Only monitor then for_open_with file when the popup menu is visible.
	Also, don't monitor it when opening the location, as this can cause
	us to unnecessary re-read the mime list on force-reload	opens
	(e.g. non-local opens).
	
=== nautilus 2.5.1.1 ===

2003-11-12  Dave Camp  <dave@ximian.com>

	* NEWS:
	* configure.in: 2.5.1.1
	
	* configure.in:
	* components/emblem/Makefile.am:
	* components/image_properties/Makefile.am:
	* components/sample/Makefile.am:
	* src/Makefile.am:
	* src/file-manager/Makefile.am: Cleaned up DISABLE_DEPREACTED 
	bits.

2003-11-11  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c 
	(list_view_get_first_visible_file_callback): Unref the file
	before returning its uri.

=== nautilus 2.5.1 ===

2003-11-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.5.1, require later eel & gnome-vfs
	
2003-11-06  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* nautilus-computer.desktop.in:
	* nautilus-home.desktop.in:
	New desktop files
	
	* nautilus.desktop.in:
	Make this one "browse filesystem"
	
	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-global-preferences.c:
	* libnautilus-private/nautilus-global-preferences.h:
	computer desktop icon prefs
	
	* libnautilus-private/nautilus-desktop-icon-file.c:
	(update_info_from_link): Set permissions too
	
	* libnautilus-private/nautilus-desktop-link-monitor.c:
	* libnautilus-private/nautilus-desktop-link.[ch]:
	Add computer icon
	
	* src/Makefile.am:
	* src/nautilus-connect-server-dialog.[ch]:
	Connect server dialog
	